# 5930-Computational-Geometry_HW12

./: CGALComponents.h  CMakeLists.txt  DrawUsingQt.h  LinearithmicTimeClosestPair.h  QuadraticTimeClosestPair.h  main.cpp
